Iruzkinak gordetzeko funtzioa ezarrita

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -442,3 +442,11 @@ nav a {
 .laburpenaDiv > form > div label {
   font-weight: bold;
 }
+#iruzkinak_container {
+  margin-top: 20px;
+ 
+
+}
+h3 {
+  color: var(--mainColor);
+}
